--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -17,4 +17,4 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       working-directory: java-deps
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag zm-java-deps:$(date +%s)
