--- a/java-deps/pom.xml
+++ b/java-deps/pom.xml
@@ -12,9 +12,9 @@
 
     <dependencies>
       <dependency>
-        <groupId>io.hypersistence</groupId>
-        <artifactId>hypersistence-utils-hibernate-52</artifactId>
-        <version>3.7.2</version>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-starter-gateway</artifactId>
+        <version>3.1.9</version>
       </dependency>
     </dependencies>
 
