--- a/java-deps/pom.xml
+++ b/java-deps/pom.xml
@@ -16,6 +16,11 @@
         <artifactId>spring-cloud-starter-gateway</artifactId>
         <version>3.1.9</version>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-gateway-server</artifactId>
+        <version>3.1.9</version>
+      </dependency>
     </dependencies>
 
 </project>
