--- a/java-deps/pom.xml
+++ b/java-deps/pom.xml
@@ -10,17 +10,149 @@
     <packaging>jar</packaging>
     <description>Gets build deps</description>
 
+	<properties>
+		<main.basedir>${basedir}/../..</main.basedir>
+		<spring-cloud-bus.version>3.1.3</spring-cloud-bus.version>
+		<spring-cloud-build.version>3.1.9</spring-cloud-build.version>
+		<spring-cloud-cloudfoundry.version>3.1.4</spring-cloud-cloudfoundry.version>
+		<spring-cloud-commons.version>3.1.8</spring-cloud-commons.version>
+		<spring-cloud-circuitbreaker.version>2.1.8</spring-cloud-circuitbreaker.version>
+		<spring-cloud-config.version>3.1.9</spring-cloud-config.version>
+		<spring-cloud-consul.version>3.1.5</spring-cloud-consul.version>
+		<spring-cloud-contract.version>3.1.9</spring-cloud-contract.version>
+		<spring-cloud-function.version>3.2.12</spring-cloud-function.version>
+		<spring-cloud-gateway.version>3.1.9</spring-cloud-gateway.version>
+		<spring-cloud-kubernetes.version>2.1.9</spring-cloud-kubernetes.version>
+		<spring-cloud-netflix.version>3.1.8</spring-cloud-netflix.version>
+		<spring-cloud-openfeign.version>3.1.9</spring-cloud-openfeign.version>
+		<spring-cloud-sleuth.version>3.1.10</spring-cloud-sleuth.version>
+		<spring-cloud-stream.version>3.2.10</spring-cloud-stream.version>
+		<spring-cloud-task.version>2.4.6</spring-cloud-task.version>
+		<spring-cloud-vault.version>3.1.4</spring-cloud-vault.version>
+		<spring-cloud-zookeeper.version>3.1.5</spring-cloud-zookeeper.version>
+		<spring-cloud-cli.version>3.1.1</spring-cloud-cli.version>
+	</properties>
     <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-starter-gateway</artifactId>
-        <version>3.1.9</version>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-gateway-server</artifactId>
-        <version>3.1.9</version>
-      </dependency>
+        <!-- bom dependencies at the bottom so they can be overridden above -->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-commons-dependencies</artifactId>
+            <version>${spring-cloud-commons.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-netflix-dependencies</artifactId>
+            <version>${spring-cloud-netflix.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-stream-dependencies</artifactId>
+            <version>${spring-cloud-stream.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-task-dependencies</artifactId>
+            <version>${spring-cloud-task.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-circuitbreaker-dependencies</artifactId>
+            <version>${spring-cloud-circuitbreaker.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-dependencies</artifactId>
+            <version>${spring-cloud-config.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-function-dependencies</artifactId>
+            <version>${spring-cloud-function.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-gateway-dependencies</artifactId>
+            <version>${spring-cloud-gateway.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-consul-dependencies</artifactId>
+            <version>${spring-cloud-consul.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-sleuth-dependencies</artifactId>
+            <version>${spring-cloud-sleuth.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-vault-dependencies</artifactId>
+            <version>${spring-cloud-vault.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-zookeeper-dependencies</artifactId>
+            <version>${spring-cloud-zookeeper.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-cloudfoundry-dependencies</artifactId>
+            <version>${spring-cloud-cloudfoundry.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-bus-dependencies</artifactId>
+            <version>${spring-cloud-bus.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-contract-dependencies</artifactId>
+            <version>${spring-cloud-contract.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-openfeign-dependencies</artifactId>
+            <version>${spring-cloud-openfeign.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-kubernetes-dependencies</artifactId>
+            <version>${spring-cloud-kubernetes.version}</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
     </dependencies>
 
 </project>
