--- a/java-deps/pom.xml
+++ b/java-deps/pom.xml
@@ -9,6 +9,13 @@
     <name>build-deps</name>
     <packaging>jar</packaging>
     <description>Gets build deps</description>
+
+    <parent>
+	    <groupId>org.springframework.boot</groupId>
+	    <artifactId>spring-boot-starter-parent</artifactId>
+	    <version>2.5.7</version>
+	    <relativePath/>
+    </parent>
 	
     <properties>
         <spring-cloud.version>2021.0.9</spring-cloud.version>
@@ -25,6 +32,15 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
+    
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
 	
     <dependencies>
         <dependency>
