--- a/java-deps/pom.xml
+++ b/java-deps/pom.xml
@@ -32,76 +32,112 @@
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2021.0.9</spring-cloud.version>
+	<spring-cloud-bus.version>3.1.3</spring-cloud-bus.version>
+	<spring-cloud-build.version>3.1.9</spring-cloud-build.version>
+	<spring-cloud-cloudfoundry.version>3.1.4</spring-cloud-cloudfoundry.version>
+	<spring-cloud-commons.version>3.1.8</spring-cloud-commons.version>
+	<spring-cloud-circuitbreaker.version>2.1.8</spring-cloud-circuitbreaker.version>
+	<spring-cloud-config.version>3.1.9</spring-cloud-config.version>
+	<spring-cloud-consul.version>3.1.5</spring-cloud-consul.version>
+	<spring-cloud-contract.version>3.1.9</spring-cloud-contract.version>
+	<spring-cloud-function.version>3.2.12</spring-cloud-function.version>
+	<spring-cloud-gateway.version>3.1.9</spring-cloud-gateway.version>
+	<spring-cloud-kubernetes.version>2.1.9</spring-cloud-kubernetes.version>
+	<spring-cloud-netflix.version>3.1.8</spring-cloud-netflix.version>
+	<spring-cloud-openfeign.version>3.1.9</spring-cloud-openfeign.version>
+	<spring-cloud-sleuth.version>3.1.10</spring-cloud-sleuth.version>
+	<spring-cloud-stream.version>3.2.10</spring-cloud-stream.version>
+	<spring-cloud-task.version>2.4.6</spring-cloud-task.version>
+	<spring-cloud-vault.version>3.1.4</spring-cloud-vault.version>
+	<spring-cloud-zookeeper.version>3.1.5</spring-cloud-zookeeper.version>
+	<spring-cloud-cli.version>3.1.1</spring-cloud-cli.version>
     </properties>
     
     <dependencies>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-commons</artifactId>
+		<version>${spring-cloud-commons.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-netflix</artifactId>
+		<version>${spring-cloud-netflix.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-stream</artifactId>
+		<version>${spring-cloud-stream.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-task</artifactId>
+		<version>${spring-cloud-task.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-circuitbreaker</artifactId>
+		<version>${spring-cloud-circuitbreaker.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-config</artifactId>
+		<version>${spring-cloud-config.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-function</artifactId>
+		<version>${spring-cloud-function.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-gateway</artifactId>
+		<version>${spring-cloud-gateway.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-consul</artifactId>
+		<version>${spring-cloud-consul.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-sleuth</artifactId>
+		<version>${spring-cloud-sleuth.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-vault</artifactId>
+		<version>${spring-cloud-vault.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-zookeeper</artifactId>
+		<version>${spring-cloud-zookeeper.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-cloudfoundry</artifactId>
+		<version>${spring-cloud-cloudfoundry.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-bus</artifactId>
+		<version>${spring-cloud-bus.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-contract</artifactId>
+		<version>${spring-cloud-contract.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-openfeign</artifactId>
+		<version>${spring-cloud-openfeign.version}</version>
 	</dependency>
 	<dependency>
 		<groupId>org.springframework.cloud</groupId>
 		<artifactId>spring-cloud-kubernetes</artifactId>
+		<version>${spring-cloud-kubernetes.version}</version>
 	</dependency>
     </dependencies>
     
