--- a/java-deps/pom.xml
+++ b/java-deps/pom.xml
@@ -18,32 +18,24 @@
     </parent>
 	
     <properties>
-        <spring-cloud.version>2021.0.9</spring-cloud.version>
     </properties>
 	
     <dependencyManagement>
-        <dependencies>
-            <dependency>
-                <groupId>org.springframework.cloud</groupId>
-                <artifactId>spring-cloud-dependencies</artifactId>
-                <version>${spring-cloud.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-        </dependencies>
     </dependencyManagement>
 	
     <dependencies>
-        <dependency>
-            <groupId>com.atlassian.bamboo</groupId>
-            <artifactId>bamboo-specs-api</artifactId>
-            <version>9.6.4</version>
-        </dependency>
-        <dependency>
-            <groupId>com.atlassian.bamboo</groupId>
-            <artifactId>bamboo-specs</artifactId>
-            <version>9.6.4</version>
-        </dependency>
+		<dependency>
+		    <groupId>org.instancio</groupId>
+		    <artifactId>instancio-junit</artifactId>
+		    <version>5.0.2</version>
+		    <scope>test</scope>
+		</dependency>
+		<dependency>
+		    <groupId>org.instancio</groupId>
+		    <artifactId>instancio-core</artifactId>
+		    <version>5.0.2</version>
+		    <scope>test</scope>
+		</dependency>
     </dependencies>
 
 </project>
